--- a/src/app/components/homepage/homepage.component.css
+++ b/src/app/components/homepage/homepage.component.css
@@ -1,185 +1,191 @@
 @import url('https://fonts.googleapis.com/css2?family=Spartan:wght@900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital@1&display=swap');
 * {
-  height: 100%;
+height: 100%;
 }
 #particles-js #bg {
-  clip-path: polygon(0 0, 100% 0, 100% 33%, 0 51%);
-  background-color: #001233;
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  z-index: -1;
+clip-path: polygon(0 0, 100% 0, 100% 33%, 0 51%);
+background-color: #001233;
+width: 100%;
+height: 100%;
+position: fixed;
+z-index: -1;
 }
 @media (min-width: 840px) {
-    #particles-js #bg {
-    clip-path: polygon(0 0, 75% 0, 55% 100%, 0% 100%);
-    position: fixed;
-  }
+#particles-js #bg {
+clip-path: polygon(0 0, 75% 0, 55% 100%, 0% 100%);
+position: fixed;
 }
- div#particles-js {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  z-index: 0;
 }
-@media (min-width: 840px) {
-   div#particles-js {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    z-index: 0;
-  }
-}
- div#imageSocial {
-  position: absolute;
-  top: 55%;
-  left: 33%;
-  display: inline-block;
-  vertical-align: middle;
+div#particles-js {
+position: fixed;
+width: 100%;
+height: 100%;
+z-index: 0;
 }
 @media (min-width: 840px) {
-   div#imageSocial {
-    position: absolute;
-    float: right;
-    top: 30%;
-    left: 75%;
-    display: inline-block;
-    vertical-align: middle;
-  }
+div#particles-js {
+position: fixed;
+width: 100%;
+height: 100%;
+z-index: 0;
 }
- div#imageSocial img#linkedin {
-  width: 180px;
-  height: 45px;
-  position: relative;
-  z-index: 9999;
 }
-@media (min-width: 840px) {
-   div#imageSocial img#linkedin {
-    width: 200px;
-    height: 70px;
-    position: relative;
-    vertical-align: middle;
-    padding-bottom: 20px;
-    left: 35%;
-    z-index: 9999;
-  }
-}
- div#imageSocial img#github {
-  margin-top: 30px;
-  width: 150px;
-  height: 60px;
-  position: relative;
-  z-index: 9999;
+.imageSocial {
+position: absolute;
+top: 55%;
+left: 33%;
+display: inline-block;
+vertical-align: middle;
 }
 @media (min-width: 840px) {
-   div#imageSocial img#github {
-    width: 200px;
-    height: 130px;
-    position: relative;
-    vertical-align: middle;
-    right: 5px;
-    padding-top: 50px;
-    padding-bottom: 13px;
-    z-index: 9999;
-  }
+.imageSocial {
+position: absolute;
+float: right;
+top: 30%;
+left: 75%;
+display: inline-block;
+vertical-align: middle;
 }
- div#imageSocial img#drive {
-  margin-top: 30px;
-  width: 150px;
-  height: 50px;
-  position: relative;
-  z-index: 9999;
+}
+#linkedin {
+width: 180px;
+height: 45px;
+position: relative;
+z-index: 9999;
 }
 @media (min-width: 840px) {
-   div#imageSocial img#drive {
-    width: 200px;
-    height: 120px;
-    position: relative;
-    vertical-align: middle;
-    padding-top: 58px;
-    right: 30%;
-    z-index: 9999;
-  }
+#linkedin {
+width: 100px;
+height: 90px;
+position: relative;
+vertical-align: middle;
+padding-bottom: 20px;
+left: 35%;
+z-index: 9999;
+}
+}
+#github {
+margin-top: 30px;
+width: 180px;
+height: 60px;
+position: relative;
+z-index: 9999;
+}
+
+@media (min-width: 840px) {
+#github {
+width: 100px;
+height: 130px;
+position: relative;
+vertical-align: middle;
+right: 5px;
+padding-top: 50px;
+padding-bottom: 13px;
+z-index: 9999;
+}
+}
+
+#drive {
+margin-top: 30px;
+width: 150px;
+height: 50px;
+position: relative;
+z-index: 9999;
+}
+
+@media (min-width: 840px) {
+#drive {
+width: 100px;
+height: 130px;
+position: relative;
+vertical-align: middle;
+right: 50px;
+padding-top: 50px;
+padding-bottom: 13px;
+z-index: 9999;
+}
 }
 @media (min-width: 840px) {
-   div#imageSocial a {
-    position: relative;
-  }
+.imageSocial a {
+position: relative;
+}
 }
 
 
 
 /* @media (min-width: 840px) {
-  main {
-    display: grid;
-    grid-template-columns: 50% auto;
-    grid-template-areas: "primary card";
-  }
+main {
+display: grid;
+grid-template-columns: 50% auto;
+grid-template-areas: "primary card";
+}
 } */
 
 
 
-/* 
-@media (min-width: 840px) {
-   .rectangle1 {
-    height: 80px;
-    width: 750px;
-    background-color: #fff;
-    position: absolute;
-    top: 33%;
-  }
+
+/* @media (min-width: 840px) {
+.rectangle1 {
+height: 80px;
+width: 750px;
+background-color: #fff;
+position: absolute;
+top: 33%;
+}
 }
 @media (min-width: 840px) {
-   .rectangle2 {
-    height: 52px;
-    width: 700px;
-    background-color: #fff;
-    position: absolute;
-    top: 46%;
-  }
+.rectangle2 {
+height: 52px;
+width: 700px;
+background-color: #fff;
+position: absolute;
+top: 46%;
+}
 } */
 
 
- #primary {
-  color: #fff;
-  padding: 25px;
-  text-align: center;
-  position: absolute;
-  z-index: 9999;
+#primary {
+color: #fff;
+padding: 25px;
+text-align: center;
+position: absolute;
+z-index: 9999;
+height: 50%;
 }
 
 @media (min-width: 840px) {
-   #primary {
-    position: absolute;
-    top: 30%;
-    left: 10%;
-    margin: auto;
-  }
+#primary {
+position: absolute;
+top: 30%;
+left: 10%;
+margin: auto;
+}
 }
 
- #primary h1 {
-  font-family: 'Spartan';
-  font-size: 3em;
-  margin-top: 10px;
-}
-
-@media (min-width: 840px) {
-   #primary h1 {
-    width: 100%;
-    font-size: 4em;
-    line-height: 0.9em;
-  }
-}
-
- #primary h3 {
-  font-family: 'Montserrat';
-  font-size: 18px;
+#primary #h1 {
+font-family: 'Spartan';
+font-size: 3em;
+margin-top: 10px;
 }
 
 @media (min-width: 840px) {
-   #primary h3 {
-    font-family: 'Montserrat';
-    font-size: 45px;
-  }
+#primary #h1 {
+width: 100%;
+font-size: 4em;
+line-height: 0.9em;
+}
+}
+
+#primary #h3 {
+font-family: 'Montserrat';
+font-size: 18px;
+}
+
+@media (min-width: 840px) {
+#primary #h3 {
+font-family: 'Montserrat';
+font-size: 45px;
+/* -10%; */
+}
 }
