--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,25 +1,46 @@
 <div id="particles-js">
-    <div id="bg"></div>
+    <div id="bg">
+       
+      <div class="topBar">
+    
+         <img class=' logo ' src="../../../assets/1.png">
+        </div>
+      
+
+    </div>
      
     
+
+
+   
+
+    <br>
+    <button type="button" class="btn btn-primary">Join Club</button>
+    
     <div id="primary">
-    <span id="h1">Raghav Sahni</span><br/>
-    <span id="h3">Front-end Developer</span>
+    <span id="h1">Deventure Select </span>
+    <br/>
+    <span id="h3">Your Event Buddy</span>
+     <span>
+
+
+     </span>
     </div>
     
     <div class="imageSocial">
      
     
-    <a href="https://www.linkedin.com/in/raghav-s-451087bb/" target="_blank">
-    <img id="linkedin" src="../../../assets/f_logo_RGB-Blue_1024.png"></a>
+    <a href="https://www.facebook.com/deventureselect/" target="_blank">
+    <img id="linkedin" src="../../../assets/f_logo_RGB-Blue_1024.png">
+    </a>
      
     
     
     <br />
      
     
-    <a href="https://github.com/raghavsahni" target="_blank">
-    <img id="github" src="../../../assets/f_logo_RGB-Blue_1024.png">
+    <a href="https://instagram.com/deventure.select?igshid=qjqs6z80az88" target="_blank">
+    <img id="github" src="../../../assets/instagram-logo-png-2428.png">
     </a>
     
     <br />
@@ -29,9 +50,9 @@
     
      
     
-    <a href="https://drive.google.com/file/d/1D7P5WOXVXZASwLfb4jCxM00kakpHtvK1/view?usp=sharing"
+    <a href="https://wa.me/919996111033"
     target="_blank">
-    <img id="drive" src="../../../assets/f_logo_RGB-Blue_1024.png">
+    <img id="drive" src="../../../assets/580b57fcd9996e24bc43c543.png">
     </a>
     </div>
      
